[gd_scene load_steps=6 format=2]

[ext_resource path="res://hamburger/exit.gd" type="Script" id=1]
[ext_resource path="res://planatrip/police.png" type="Texture" id=2]
[ext_resource path="res://planatrip/legend.gd" type="Script" id=3]
[ext_resource path="res://planatrip/hospital.png" type="Texture" id=4]
[ext_resource path="res://planatrip/station.png" type="Texture" id=5]

[node name="legend" type="Panel"]
margin_right = 120.0
margin_bottom = 180.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 120.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="buses" type="Label" parent="CenterContainer"]
margin_left = 37.0
margin_right = 83.0
margin_bottom = 14.0
text = "Legend"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_top = 20.0
margin_right = 120.0
margin_bottom = 180.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
margin_right = 120.0
margin_bottom = 4.0

[node name="policeButton" type="Button" parent="VBoxContainer"]
margin_top = 8.0
margin_right = 120.0
margin_bottom = 28.0
toggle_mode = true
flat = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/policeButton"]
margin_right = 90.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/policeButton/HBoxContainer"]
margin_right = 20.0
margin_bottom = 20.0
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="VBoxContainer/policeButton/HBoxContainer"]
margin_left = 24.0
margin_top = 3.0
margin_right = 111.0
margin_bottom = 17.0
text = "Police Station"

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
margin_top = 32.0
margin_right = 120.0
margin_bottom = 36.0

[node name="hospitalButton" type="Button" parent="VBoxContainer"]
margin_top = 40.0
margin_right = 120.0
margin_bottom = 60.0
toggle_mode = true
flat = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/hospitalButton"]
margin_right = 90.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/hospitalButton/HBoxContainer"]
margin_right = 20.0
margin_bottom = 20.0
texture = ExtResource( 4 )

[node name="Label" type="Label" parent="VBoxContainer/hospitalButton/HBoxContainer"]
margin_left = 24.0
margin_top = 3.0
margin_right = 77.0
margin_bottom = 17.0
text = "Hospital"

[node name="HSeparator3" type="HSeparator" parent="VBoxContainer"]
margin_top = 64.0
margin_right = 120.0
margin_bottom = 68.0

[node name="stationButton" type="Button" parent="VBoxContainer"]
margin_top = 72.0
margin_right = 120.0
margin_bottom = 92.0
toggle_mode = true
flat = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/stationButton"]
margin_right = 90.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/stationButton/HBoxContainer"]
margin_right = 20.0
margin_bottom = 20.0
texture = ExtResource( 5 )

[node name="Label" type="Label" parent="VBoxContainer/stationButton/HBoxContainer"]
margin_left = 24.0
margin_top = 3.0
margin_right = 103.0
margin_bottom = 17.0
text = "Train Station"

[node name="Button" type="Button" parent="."]
margin_right = 12.0
margin_bottom = 20.0
text = "X"
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
